<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <com.hewei.rusiablocks.WallView
        android:id="@+id/vWall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:background="@color/wall_bkg" />
    
    <com.hewei.rusiablocks.BlockView
        android:id="@+id/vBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/vWall"
        android:layout_alignTop="@id/vWall"
        android:background="@color/wall_bkg"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/vWall"
        android:layout_marginTop="10dp"
        android:layout_below="@id/vBlock"
        android:orientation="vertical" >
        
        <TextView 
	        android:id="@+id/tvScore"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
        
        <TextView
            android:id="@+id/tvLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <Button
            android:id="@+id/bvControl"
            android:text="@string/action_start"
            android:layout_marginTop="15dp"
            style="@style/operation_btn" />    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/vWall"
        android:layout_marginTop="20dp" >
        
        <Button
            android:id="@+id/bvLeft"
            android:text="@string/action_left"
            style="@style/operation_btn" />
        
        <View
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bvRight"
            android:text="@string/action_right"
            style="@style/operation_btn"/>
        
        <View
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bvTransform"
            android:text="@string/action_transform"
            style="@style/operation_btn" />
        
        <View
            android:layout_width="15dp"
            android:layout_height="wrap_content" />
        
        <Button
            android:id="@+id/bvDown"
            android:text="@string/action_down"
            style="@style/operation_btn" />
    </LinearLayout>

</RelativeLayout>